2000-10-08  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Bump to 2.1.95.

	* configure.in: Remove warning message.

2000-10-07  Ulrich Drepper  <drepper@redhat.com>

	* elf/elf.h: Add a few section-related symbols.

	* include/features.h (__STDC_ISO_10646__): Set to correct date.
	Patch by Markus Kuhn <Markus.Kuhn@cl.cam.ac.uk>.

2000-10-06  Jes Sorensen  <jes@linuxcare.com>

	* sysdeps/ia64/fpu/fraiseexcpt.c (feraiseexcept): Implement
	overflow generation by adding DBL_MAX to DBL_MAX instead of
	setting the bits manually in the fpsr and generating the exception
	with kill() if necessary.
	(feraiseexcept): Implement underflow by dividing DBL_MIN by
	DBL_MIN - similar to the overflow change described above.

2000-08-27  H.J. Lu  <hjl@gnu.org>

	* sysdeps/unix/sysv/linux/ia64/clone.S: Make it a dummy as clone
	is not supported under Linux/ia64, use clone2.

2000-10-06  Jakub Jelinek  <jakub@redhat.com>

	* malloc/malloc.h (__THROW): Define to nothing if not gcc.
	* misc/sys/cdefs.h (__THROW): Likewise.

2000-10-05  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: New file.

2000-10-02  Jakub Jelinek  <jakub@redhat.com>

	* sunrpc/svc_udp.c (svcudp_recv): Set msg_controllen to all
	remaining xp_pad space.

2000-10-05  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-close.c (_dl_close): Check imap's l_flags_1 for
	DF_1_NODELETE, not list[i]'s.

2000-10-04  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/euc-kr.c (euckr_from_ucs4): Handle U20a9.
	(BODY from direction): Map \x5c to U20a9.
	* iconvdata/testdata/EUC-KR..UTF8: Adjust to this change.
	* iconvdata/EUC-KR.irreversible: New file.
	* iconvdata/Makefile (distribute): Add EUC-KR.irreversible.

	* argp/argp-parse.c (argp_default_argp): Set libc as message domain.
	(argp_version_argp): Likewise.

2000-10-04  Jakub Jelinek  <jakub@redhat.com>

	* stdio-common/vfscanf.c (_IO_vfscanf): For [ conversion do
	input_error() if EOF is seen before processing.