@@ -1,4 +1,4 @@
-This directory contains the version 2.1.94 release of the GNU C Library.
+This directory contains the version 2.1.95 release of the GNU C Library.
 Many bugs have been fixed since the last release.
 Some bugs surely remain.
 
@@ -17,6 +17,7 @@ configurations:
 		arm-*-linuxaout		Linux-2.x on ARM using a.out binaries
 		mips*-*-linux-gnu	Linux-2.x on MIPS
 		ia64-*-linux-gnu	Linux-2.x on ia64
+		s390-*-linux-gnu	Linux-2.x on IBM S/390
 
 Former releases of this library (version 1.09.1 and perhaps earlier
 versions) used to run on the following configurations:
