@@ -1,4 +1,4 @@
-# Copyright (C) 1998 Free Software Foundation, Inc.
+# Copyright (C) 1998, 2000 Free Software Foundation, Inc.
 # This file is part of the GNU C Library.
 
 # The GNU C Library is free software; you can redistribute it and/or
@@ -45,7 +45,7 @@ endif
 
 distribute := nscd.h nscd-client.h dbg_log.h \
 	      $(nscd-modules:=.c) nscd_nischeck.c TODO nscd.conf nscd.init \
-	      nscd_proto.h
+	      nscd_proto.h nscd-types.h
 
 include ../Rules
 
